--- a/index.html
+++ b/index.html
@@ -384,6 +384,109 @@ $(document).ready(function(){
                 </div>
 
             </div>
+            <div class="contentmain">
+                <h4>Ascoltati di recente</h4>
+            </div>
+
+            <div class="itemcontainer2">
+                <div class="containeritem2">
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/20d2d836/9921/4bcd/b1fa/4ff90e114a8f/320x320.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Avicii (01)</a>
+                            <a  class="playlist_write3" href="#">AVICII</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                        <svg class="cellmix" viewBox="0 0 144 144" fill="none" xmlns="http://www.w3.org/2000/svg"><defs><clipPath id="grid-figure-0016019dd94e29b2c90694a2d44f69-clip"><rect width="136" height="136" fill="white" transform="translate(4 4)"></rect></clipPath></defs><rect x="2" y="2" width="140" height="140" fill="black"></rect><rect x="2" y="2" width="140" height="140" fill="#FFFFFF" fill-opacity="0.2" stroke="#FFFFFF" stroke-width="4"></rect><g clip-path="url(#grid-figure-0016019dd94e29b2c90694a2d44f69-clip)"><image xlink:href="https://resources.tidal.com/images/28882d04/d49b/422d/b695/7ba4f1104471/320x320.jpg" x="16.0674" y="56.918" width="114" height="114" transform="rotate(-10 16.0674 56.918)"></image><text x="10.5" y="22.8" fill="#FFFFFF" class="title--3T2Pn mix--21Lfe"><tspan x="10.5" dx="0" dy="0">Antisocial</tspan></text><path fill-rule="evenodd" clip-rule="evenodd" d="M122.532 12.7996C121.676 13.3705 120.975 14.1439 120.489 15.051C120.004 15.9582 119.75 16.9711 119.75 17.9999C119.75 19.0287 120.004 20.0417 120.489 20.9488C120.975 21.856 121.676 22.6293 122.532 23.2002L121.7 24.4481C120.639 23.7402 119.768 22.7813 119.167 21.6564C118.565 20.5316 118.25 19.2756 118.25 17.9999C118.25 16.7242 118.565 15.4682 119.167 14.3434C119.768 13.2186 120.639 12.2597 121.7 11.5518L122.532 12.7996Z" fill="#FFFFFF"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M131.511 15.051C131.025 14.1439 130.324 13.3705 129.468 12.7996L130.3 11.5518C131.361 12.2597 132.232 13.2186 132.833 14.3434C133.435 15.4682 133.75 16.7242 133.75 17.9999C133.75 19.2756 133.435 20.5316 132.833 21.6564C132.232 22.7813 131.361 23.7402 130.3 24.4481L129.468 23.2002C130.324 22.6293 131.025 21.856 131.511 20.9488C131.996 20.0417 132.25 19.0287 132.25 17.9999C132.25 16.9711 131.996 15.9582 131.511 15.051Z" fill="#FFFFFF"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M124.413 15.5734C124.014 15.8399 123.687 16.2007 123.46 16.624C123.234 17.0473 123.115 17.52 123.115 18C123.115 18.4801 123.234 18.9527 123.46 19.376C123.687 19.7993 124.014 20.1602 124.413 20.4266L123.581 21.6744C122.976 21.2709 122.48 20.7245 122.137 20.0835C121.795 19.4426 121.615 18.7269 121.615 18C121.615 17.2731 121.795 16.5575 122.137 15.9165C122.48 15.2756 122.976 14.7291 123.581 14.3257L124.413 15.5734Z" fill="#FFFFFF"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M128.567 16.624C128.341 16.2007 128.014 15.8399 127.614 15.5734L128.447 14.3257C129.051 14.7291 129.547 15.2756 129.89 15.9165C130.233 16.5575 130.412 17.2731 130.412 18C130.412 18.7269 130.233 19.4426 129.89 20.0835C129.547 20.7245 129.051 21.2709 128.447 21.6744L127.614 20.4266C128.014 20.1602 128.341 19.7993 128.567 19.376C128.794 18.9527 128.912 18.4801 128.912 18C128.912 17.52 128.794 17.0473 128.567 16.624Z" fill="#FFFFFF"></path><path d="M125.997 18.9969C126.55 18.9969 126.997 18.5491 126.997 17.9967C126.997 17.4444 126.55 16.9966 125.997 16.9966C125.445 16.9966 124.997 17.4444 124.997 17.9967C124.997 18.5491 125.445 18.9969 125.997 18.9969Z" fill="#FFFFFF"></path></g></svg>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Antisocial</a>
+                            <a  class="playlist_write3" href="#">Radio del brano</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                        <svg class="cellmix" viewBox="0 0 144 144" fill="none" xmlns="http://www.w3.org/2000/svg"><defs><clipPath id="grid-figure-001052c46dc0880d7ce0ed38130477-clip"><rect width="136" height="136" fill="white" transform="translate(4 4)"></rect></clipPath></defs><rect x="2" y="2" width="140" height="140" fill="black"></rect><rect x="2" y="2" width="140" height="140" fill="#b9c1e1" fill-opacity="0.2" stroke="#b9c1e1" stroke-width="4"></rect><g clip-path="url(#grid-figure-001052c46dc0880d7ce0ed38130477-clip)"><image xlink:href="https://resources.tidal.com/images/6adf3a1a/4407/4d1e/a129/3fe796a9285a/320x320.jpg" x="16.0674" y="56.918" width="114" height="114" transform="rotate(-10 16.0674 56.918)"></image><text x="10.5" y="22.8" fill="#b9c1e1" class="title--3T2Pn mix--21Lfe"><tspan x="10.5" dx="0" dy="0">Goodbye</tspan><tspan x="10.5" dx="0" dy="14.3">Philadelph</tspan></text><path fill-rule="evenodd" clip-rule="evenodd" d="M122.532 12.7996C121.676 13.3705 120.975 14.1439 120.489 15.051C120.004 15.9582 119.75 16.9711 119.75 17.9999C119.75 19.0287 120.004 20.0417 120.489 20.9488C120.975 21.856 121.676 22.6293 122.532 23.2002L121.7 24.4481C120.639 23.7402 119.768 22.7813 119.167 21.6564C118.565 20.5316 118.25 19.2756 118.25 17.9999C118.25 16.7242 118.565 15.4682 119.167 14.3434C119.768 13.2186 120.639 12.2597 121.7 11.5518L122.532 12.7996Z" fill="#b9c1e1"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M131.511 15.051C131.025 14.1439 130.324 13.3705 129.468 12.7996L130.3 11.5518C131.361 12.2597 132.232 13.2186 132.833 14.3434C133.435 15.4682 133.75 16.7242 133.75 17.9999C133.75 19.2756 133.435 20.5316 132.833 21.6564C132.232 22.7813 131.361 23.7402 130.3 24.4481L129.468 23.2002C130.324 22.6293 131.025 21.856 131.511 20.9488C131.996 20.0417 132.25 19.0287 132.25 17.9999C132.25 16.9711 131.996 15.9582 131.511 15.051Z" fill="#b9c1e1"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M124.413 15.5734C124.014 15.8399 123.687 16.2007 123.46 16.624C123.234 17.0473 123.115 17.52 123.115 18C123.115 18.4801 123.234 18.9527 123.46 19.376C123.687 19.7993 124.014 20.1602 124.413 20.4266L123.581 21.6744C122.976 21.2709 122.48 20.7245 122.137 20.0835C121.795 19.4426 121.615 18.7269 121.615 18C121.615 17.2731 121.795 16.5575 122.137 15.9165C122.48 15.2756 122.976 14.7291 123.581 14.3257L124.413 15.5734Z" fill="#b9c1e1"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M128.567 16.624C128.341 16.2007 128.014 15.8399 127.614 15.5734L128.447 14.3257C129.051 14.7291 129.547 15.2756 129.89 15.9165C130.233 16.5575 130.412 17.2731 130.412 18C130.412 18.7269 130.233 19.4426 129.89 20.0835C129.547 20.7245 129.051 21.2709 128.447 21.6744L127.614 20.4266C128.014 20.1602 128.341 19.7993 128.567 19.376C128.794 18.9527 128.912 18.4801 128.912 18C128.912 17.52 128.794 17.0473 128.567 16.624Z" fill="#b9c1e1"></path><path d="M125.997 18.9969C126.55 18.9969 126.997 18.5491 126.997 17.9967C126.997 17.4444 126.55 16.9966 125.997 16.9966C125.445 16.9966 124.997 17.4444 124.997 17.9967C124.997 18.5491 125.445 18.9969 125.997 18.9969Z" fill="#b9c1e1"></path></g></svg>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Goodbye Philadelphia</a>
+                            <a  class="playlist_write3" href="#">Radio del brano</a>
+                        </div>
+                    </div>
+
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/5b9a2431/53de/48c7/847e/a8487f308d20/480x480.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Dua Lipa</a>
+                            <a  class="playlist_write3" href="#">Essential</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/0b68e959/a2a4/433f/aafc/67f0d2416d5c/480x480.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Marshmello</a>
+                            <a  class="playlist_write3" href="#">Essential</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/c5cbfc2a/19ad/4e17/ac2c/dbcb20d5ae1c/320x320.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Oh my my</a>
+                            <a  class="playlist_write3" href="#">Onerepublic</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/2151387f/6a06/4678/8d63/99ee645a072c/320x320.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Brighter Days</a>
+                            <a  class="playlist_write3" href="#">Sigala</a>
+                        </div>
+                    </div>
+                    <div class="mixcontainer-2">
+                        <div class="mixcontiner-1">
+                            <div class="image2">
+                                <img class="" src="https://resources.tidal.com/images/bfa697e5/4a68/4a1e/8890/bf1fe9fa7775/480x480.jpg" alt="">
+
+                            </div>
+                        </div>
+                        <div class="descrizionimix">
+                            <a class="playlist_write2" href="#">Logic</a>
+                            <a  class="playlist_write3" href="#">Essential</a>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
 
 
 
