--- a/index.html
+++ b/index.html
@@ -267,11 +267,15 @@ $(document).ready(function(){
                 <h4>Featured</h4>
             </div>
             <div class="itemcontainer">
-                <div class="containeritem2">
+                <div class="containeritemilmegliodelpeggio">
                     <div class="itemcontainer-1">
-                        <div class="image1">
+                        <div class="image1 pointer">
+                            <div class="overlay">
+                                <span id="scrittehover">ciao</span>
+                            </div>
                             <img src="https://resources.tidal.com/images/47348ca1/f6db/43f2/bad9/80ad90e49de7/1100x800.jpg" alt="">
                         </div>
+
                         <div class="descrizioni">
                         <h5 class="playlist_write">PLAYLIST</h5>
                         <h5 class="playlist_write2">Il meglio della musica in FM</h5>
