fine esercizio, partenza ritocchi

--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@ $(document).ready(function(){
             <div class="itemcontainer">
                 <div class="containeritemilmegliodelpeggio">
                     <div class="itemcontainer-1">
-                        <div class="image1 pointer">
-                            <div class="overlay">
-                                <span id="scrittehover">ciao</span>
-                            </div>
+                        <div class="image1">
+                            <!-- <div class="overlay">
+                                <span id="scrittehover">Scopri la nuova musica italiana</span>
+                            </div> -->
                             <img src="https://resources.tidal.com/images/47348ca1/f6db/43f2/bad9/80ad90e49de7/1100x800.jpg" alt="">
                         </div>
 
