fine esercizio partenza ritocchi

--- a/index.html
+++ b/index.html
@@ -509,8 +509,10 @@ $(document).ready(function(){
                 </div>
                 <div class="columnartista">
                     <a class="titolihover" href="#">Peculiarities</a>
+                <div class="inplayda">
                     <a class="titolihover centerartista" href="#">Federico Bartoli</a>
                     <a class="titolihover downartista" href="#">In play da: Peculiarities(single)</a>
+                </div>
                 </div>
                 <div class="rowrhearts">
                 <svg class="small circleclick"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="5.5" cy="12" r="1.5"></circle><circle cx="12" cy="12" r="1.5"></circle><circle cx="18.5" cy="12" r="1.5"></circle></svg>
