--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ $(document).ready(function(){
                 <div class="containeritem2">
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/20d2d836/9921/4bcd/b1fa/4ff90e114a8f/320x320.jpg" alt="">
 
                             </div>
@@ -427,7 +427,7 @@ $(document).ready(function(){
 
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/5b9a2431/53de/48c7/847e/a8487f308d20/480x480.jpg" alt="">
 
                             </div>
@@ -439,7 +439,7 @@ $(document).ready(function(){
                     </div>
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/0b68e959/a2a4/433f/aafc/67f0d2416d5c/480x480.jpg" alt="">
 
                             </div>
@@ -451,7 +451,7 @@ $(document).ready(function(){
                     </div>
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/c5cbfc2a/19ad/4e17/ac2c/dbcb20d5ae1c/320x320.jpg" alt="">
 
                             </div>
@@ -463,7 +463,7 @@ $(document).ready(function(){
                     </div>
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/2151387f/6a06/4678/8d63/99ee645a072c/320x320.jpg" alt="">
 
                             </div>
@@ -475,7 +475,7 @@ $(document).ready(function(){
                     </div>
                     <div class="mixcontainer-2">
                         <div class="mixcontiner-1">
-                            <div class="image2">
+                            <div class="image2 cellmix2hover">
                                 <img class="" src="https://resources.tidal.com/images/bfa697e5/4a68/4a1e/8890/bf1fe9fa7775/480x480.jpg" alt="">
 
                             </div>
